fix results being too wide

--- a/static/sourcecatcher.css
+++ b/static/sourcecatcher.css
@@ -136,7 +136,8 @@ ul.users_list {
   -moz-columns: 2;
   list-style-type: none;
   padding: 0;
-  text-align: center;
+  max-width: 500px;
+  margin: 20px auto;
 }
 
 @media screen and (max-width: 800px) {
